--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,11 @@ body {
   -ms-use-select: none;
   user-select: none;
 }
+
+#root {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  /* border: 1px solid black; */
+}
