--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,16 @@ body {
   padding: 2rem;
   text-align: center;
 }
+
+/* input number 화살표 없애기 */
+/* Chrome, Safari, Edge */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
