--- a/src/Filter.css
+++ b/src/Filter.css
@@ -6,7 +6,7 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #cde8d1;
+  /* background-color: #cde8d1; */
   border: none;
   z-index: 10;
   cursor: pointer;
