--- a/src/Filter.css
+++ b/src/Filter.css
@@ -21,7 +21,7 @@
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  background-color: #f3d5ce;
+  /* background-color: #f3d5ce; */
   transition: all 0.5s ease;
   z-index: 9;
   overflow: hidden;
