--- a/src/Filter.css
+++ b/src/Filter.css
@@ -61,8 +61,7 @@
   width: 100vw;
   max-width: 420px;
   min-width: 320px;
-  height: 100vh;
-  border-radius: 16px;
+  border-radius: 16px 16px 0 0;
   background-color: white;
   z-index: 11;
   overflow: hidden;
@@ -72,7 +71,7 @@
 }
 
 .filter-overlay.active {
-  transform: translateY(20%);
+  transform: translateY(0%);
   pointer-events: auto;
   opacity: 1;
   pointer-events: auto;
