--- a/src/index.css
+++ b/src/index.css
@@ -17,10 +17,12 @@
 }
 
 #root {
+  width: 100vw;
+  /* background-color: red;
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+  text-align: center; */
 }
 
 a {
@@ -36,8 +38,8 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* min-width: 320px;
+  min-height: 100vh; */
 
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -53,10 +55,10 @@ body {
   display: none; /* Chrome, Safari, Edge */
 }
 
-h1 {
+/* h1 {
   font-size: 3.2em;
   line-height: 1.1;
-}
+} */
 
 /* button {
   border-radius: 8px;
