--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -74,7 +74,6 @@
   transform: translateY(0%);
   pointer-events: auto;
   opacity: 1;
-  pointer-events: auto;
 }
 
 /* 모바일(최대 600px)에서는 더 작은 크기 적용 */
@@ -96,5 +95,9 @@
     border-radius: 8px !important;
     max-width: 100vw !important;
     min-width: 0 !important;
+  }
+
+  .filter-title {
+    display: none;
   }
 }
