--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -95,6 +95,34 @@
     border-radius: 8px !important;
     max-width: 100vw !important;
     min-width: 0 !important;
+    background-color: red;
+  }
+
+  .filter-title {
+    display: none;
+  }
+}
+
+@media (max-width: 350px) {
+  .filter-overlay {
+    padding: 4px !important;
+    border-radius: 8px !important;
+    max-width: 100vw !important;
+    min-width: 0 !important;
+    background-color: green;
+  }
+
+  .filter-title {
+    display: none;
+  }
+}
+@media (max-width: 450px) {
+  .filter-overlay {
+    padding: 4px !important;
+    border-radius: 8px !important;
+    max-width: 100vw !important;
+    min-width: 0 !important;
+    background-color: blue;
   }
 
   .filter-title {
