--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -62,7 +62,7 @@
   max-width: 420px;
   min-width: 320px;
   border-radius: 16px 16px 0 0;
-  /* background-color: white; */
+  background-color: white;
   z-index: 11;
   overflow: hidden;
   pointer-events: none;
