--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -61,10 +61,11 @@
   width: 100vw;
   max-width: 420px;
   min-width: 320px;
+  max-height: 100%;
   border-radius: 16px 16px 0 0;
   background-color: white;
-  z-index: 11;
-  overflow: hidden;
+  z-index: 20;
+  overflow: scroll;
   pointer-events: none;
   opacity: 1;
   transition: all 0.5s ease;
