--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -17,12 +17,12 @@
 
 /* 애플 워치용 */
 @media (max-width: 350px) {
-  .filter-overlay {
+  /* .filter-overlay {
     padding: 4px !important;
     border-radius: 8px !important;
     max-width: 100vw !important;
     min-width: 0 !important;
-  }
+  } */
 
   /* .filter-title {
     display: none;
